adding compiler flag