@@ -13,6 +13,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
+                    <compilerArgs>--enable-preview</compilerArgs>
                     <source>16</source>
                     <target>16</target>
                 </configuration>
